<resources>

    <string name="login_1">Tên đăng nhập/ Email</string>
    <string name="login_2">Mật khẩu</string>
    <string name="login_3">Quên mật khẩu?</string>
    <string name="login_4">Đăng nhập</string>
    <string name="login_5">Chưa có tài khoản?</string>
    <string name="login_6">Đăng ký?</string>
    <string name="setting_title">Cài đặt</string>
    <string name="setting_1">Tải ảnh đại diện</string>
    <string name="setting_2">Tổ chức</string>
    <string name="setting_3">Cá nhân</string>
    <string name="setting_4">Tên tài khoản</string>
    <string name="setting_5">Mật khẩu mới</string>
    <string name="setting_6">Thư điện tử</string>
    <string name="setting_7">Số điện thoại</string>
    <string name="setting_8">Cập nhật</string>
    <string name="setting_9">Thay đổi ngôn ngữ</string>
    <string name="about_title">Giới thiệu</string>
    <string name="about_1">Biểu mẫu</string>
    <string name="about_2">Tải lên</string>
    <string name="about_3">Chỉnh sửa</string>
    <string name="about_4">Cập nhật</string>
</resources>